--- a/Curso JavaScript/Placement/Placement4.html
+++ b/Curso JavaScript/Placement/Placement4.html
@@ -3,7 +3,7 @@
 <head>
 <script type="text/javascript" src="filename.js" ></script>
 </head>
-<body onload="sayHello();">
+<body">
 .......
 </body>
 </html>
